Rename lexer